<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_schedule"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnOcr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ocr"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnNlp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_nlp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_share" />

</LinearLayout>
